fix: fixed overflow for large user names

--- a/src/components/OrdersTable/OrdersTable.module.css
+++ b/src/components/OrdersTable/OrdersTable.module.css
@@ -44,6 +44,10 @@
 .ordersTable th:nth-child(4),
 .ordersTable td:nth-child(4) {
   width: 15%;
+  max-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .ordersTable th:nth-child(5),
 .ordersTable td:nth-child(5) {
@@ -256,6 +260,15 @@
     flex-grow: 1;
     min-width: 0;
     text-align: right;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .ordersTable td:nth-child(4) {
+    max-width: none !important;
+    overflow: visible;
+    white-space: normal;
   }
 
   .ordersTable td:nth-child(7) .statusSelect {
